--- a/resources/frontend/sass/themes/_footer.scss
+++ b/resources/frontend/sass/themes/_footer.scss
@@ -51,7 +51,7 @@
     }
 
     .footer-text-desc {
-      font-size: 13px;
+      font-size: 12px;
       text-transform: uppercase;
       text-align: left;
       letter-spacing: 1px;
